# pactify

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
pactify/: __init__.py  __version__.py
pactify/cli/: main.py
pactify/core/: __init__.py  contract.py  field.py  schema.py
pactify/diff/: __init__.py  changes.py  engine.py  rules.py  severity.py
pactify/errors/: __init__.py  base.py
pactify/units/: typing.py
tests/diff/: test_diff_contracts.py  test_severity.py
