[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pactify"
version = "0.1.0"
description = "Detect breaking REST API contract changes before they reach production"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "Parth Kansara" }
]

keywords = [
    "api",
    "contracts",
    "schema",
    "diff",
    "backward-compatibility",
    "rest",
    "ci-cd"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/<your-username>/pactify"
Repository = "https://github.com/<your-username>/pactify"
Issues = "https://github.com/<your-username>/pactify/issues"

[project.scripts]
pactify = "pactify.cli.main:main"

# -----------------------------
# Tooling configuration
# -----------------------------

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
